--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <h5>Motivation</h5>
                 <div class="pra">
-                    <p>Genius is one percent inspiration and ninety-nine percent perspiration.</p>
+                    <p>The greatest glory in living lies not in never falling, but in rising every time we fall.</p>
 
                     <p style="text-align: center;">
                         <a class="button" href="https://www.pinterest.com/dailystoic/motivational-quotes/">Read More</a>
